legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr84217.c-4.8.2-0.out.txt
pr84217.c: In function ‘foo’:
pr84217.c:5:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (short i = 0; i < 10; ++i)
   ^
pr84217.c:5:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr84217.c:6:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (short j = 0; j < 10; ++j)
     ^
